# turk-text-to-img

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COLAB_SETUP.md  Makefile  README.md  colab-interface.html  colab_notebook.ipynb  colab_setup.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
api/: main.py  models.py  routes.py
config/: settings.py
docker/: Dockerfile
src/: model.py
static/: index.html
tests/: conftest.py  test_api.py  test_model.py
turk_text_to_img.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: logging_config.py
